# polars_list_utils

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
examples/: showcase_agg.py  showcase_dsp.py  showcase_feat.py
polars_list_utils/: __init__.py
src/: agg.rs  dsp.rs  join.rs  lib.rs  op.rs  util.rs
tests/: conftest.py  test_polars_list_utils.py
