[package]
name = "polars-list-utils"
version = "0.14.0"
edition = "2024"

[lib]
name = "polars_list_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.*", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.20.*", features = ["derive"] }
serde = { version = "1.*", features = ["derive"] }
polars = { version = "0.46.*", features = ["dtype-struct"] }
polars-arrow = { version = "0.46.*" }
realfft = "3.*"
butterworth = "0.1.*"
interp = "2.*"
num-traits = "0.2.*"
thiserror = "2.*"
